// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleEditorToolbar button actions 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <button
      class="btn btn-sm kogito-button"
      data-testid="see-as-source-button"
      disabled=""
    >
      <p
        style="display: inline;"
      >
        See as source
      </p>
    </button>
    <button
      class="btn btn-sm kogito-button"
      data-testid="open-ext-editor-button"
    >
      <p
        style="display: inline;"
      >
        Open in Test Online Editor
      </p>
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn btn-sm kogito-button"
        data-testid="copy-link-button"
      >
        <p
          style="display: inline;"
        >
          Copy link to Test Online Editor
        </p>
      </button>
      <div
        class="position-absolute"
        data-testid="link-copied-alert"
        style="margin-top: 34px; right: 0px;"
      >
        <div
          class="dropdown-menu dropdown-menu-sw kogito-github-action-alert"
        >
          <span>
            Link copied to clipboard
          </span>
        </div>
      </div>
    </div>
    <button
      class="btn btn-sm kogito-button"
      data-testid="go-fullscreen-button"
    >
      <p
        style="display: inline;"
      >
        Full Screen
      </p>
    </button>
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`SingleEditorToolbar copied to clipboard message 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <button
      class="btn btn-sm kogito-button"
      data-testid="see-as-source-button"
      disabled=""
    >
      <p
        style="display: inline;"
      >
        See as source
      </p>
    </button>
    <button
      class="btn btn-sm kogito-button"
      data-testid="open-ext-editor-button"
    >
      <p
        style="display: inline;"
      >
        Open in Test Online Editor
      </p>
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn btn-sm kogito-button"
        data-testid="copy-link-button"
      >
        <p
          style="display: inline;"
        >
          Copy link to Test Online Editor
        </p>
      </button>
    </div>
    <button
      class="btn btn-sm kogito-button"
      data-testid="go-fullscreen-button"
    >
      <p
        style="display: inline;"
      >
        Full Screen
      </p>
    </button>
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`SingleEditorToolbar readonly false | textMode false | textModeEnabled false 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <button
      class="btn btn-sm kogito-button"
      data-testid="see-as-source-button"
      disabled=""
    >
      <p
        style="display: inline;"
      >
        See as source
      </p>
    </button>
    <button
      class="btn btn-sm kogito-button"
      data-testid="open-ext-editor-button"
    >
      <p
        style="display: inline;"
      >
        Open in Test Online Editor
      </p>
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn btn-sm kogito-button"
        data-testid="copy-link-button"
      >
        <p
          style="display: inline;"
        >
          Copy link to Test Online Editor
        </p>
      </button>
    </div>
    <button
      class="btn btn-sm kogito-button"
      data-testid="go-fullscreen-button"
    >
      <p
        style="display: inline;"
      >
        Full Screen
      </p>
    </button>
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`SingleEditorToolbar readonly false | textMode false | textModeEnabled true 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <button
      class="btn btn-sm kogito-button"
      data-testid="see-as-source-button"
    >
      <p
        style="display: inline;"
      >
        See as source
      </p>
    </button>
    <button
      class="btn btn-sm kogito-button"
      data-testid="open-ext-editor-button"
    >
      <p
        style="display: inline;"
      >
        Open in Test Online Editor
      </p>
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn btn-sm kogito-button"
        data-testid="copy-link-button"
      >
        <p
          style="display: inline;"
        >
          Copy link to Test Online Editor
        </p>
      </button>
    </div>
    <button
      class="btn btn-sm kogito-button"
      data-testid="go-fullscreen-button"
    >
      <p
        style="display: inline;"
      >
        Full Screen
      </p>
    </button>
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
  </div>
  <h4>
    <p
      style="display: inline;"
    >
      🔸️ This is a readonly visualization
    </p>
  </h4>
</DocumentFragment>
`;

exports[`SingleEditorToolbar readonly false | textMode true | textModeEnabled false 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <button
      class="btn btn-sm kogito-button"
      data-testid="see-as-diagram-button"
    >
      <p
        style="display: inline;"
      >
        See as diagram
      </p>
    </button>
    <button
      class="btn btn-sm kogito-button"
      data-testid="open-ext-editor-button"
    >
      <p
        style="display: inline;"
      >
        Open in Test Online Editor
      </p>
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn btn-sm kogito-button"
        data-testid="copy-link-button"
      >
        <p
          style="display: inline;"
        >
          Copy link to Test Online Editor
        </p>
      </button>
    </div>
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`SingleEditorToolbar readonly false | textMode true | textModeEnabled true 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <button
      class="btn btn-sm kogito-button"
      data-testid="see-as-diagram-button"
    >
      <p
        style="display: inline;"
      >
        See as diagram
      </p>
    </button>
    <button
      class="btn btn-sm kogito-button"
      data-testid="open-ext-editor-button"
    >
      <p
        style="display: inline;"
      >
        Open in Test Online Editor
      </p>
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn btn-sm kogito-button"
        data-testid="copy-link-button"
      >
        <p
          style="display: inline;"
        >
          Copy link to Test Online Editor
        </p>
      </button>
    </div>
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`SingleEditorToolbar readonly true | textMode false | textModeEnabled false 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <button
      class="btn btn-sm kogito-button"
      data-testid="see-as-source-button"
      disabled=""
    >
      <p
        style="display: inline;"
      >
        See as source
      </p>
    </button>
    <button
      class="btn btn-sm kogito-button"
      data-testid="open-ext-editor-button"
    >
      <p
        style="display: inline;"
      >
        Open in Test Online Editor
      </p>
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn btn-sm kogito-button"
        data-testid="copy-link-button"
      >
        <p
          style="display: inline;"
        >
          Copy link to Test Online Editor
        </p>
      </button>
    </div>
    <button
      class="btn btn-sm kogito-button"
      data-testid="go-fullscreen-button"
    >
      <p
        style="display: inline;"
      >
        Full Screen
      </p>
    </button>
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
  </div>
  <h4>
    <p
      style="display: inline;"
    >
      🔸️ This is a readonly visualization
    </p>
  </h4>
</DocumentFragment>
`;

exports[`SingleEditorToolbar readonly true | textMode true | textModeEnabled false 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <button
      class="btn btn-sm kogito-button"
      data-testid="see-as-diagram-button"
    >
      <p
        style="display: inline;"
      >
        See as diagram
      </p>
    </button>
    <button
      class="btn btn-sm kogito-button"
      data-testid="open-ext-editor-button"
    >
      <p
        style="display: inline;"
      >
        Open in Test Online Editor
      </p>
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn btn-sm kogito-button"
        data-testid="copy-link-button"
      >
        <p
          style="display: inline;"
        >
          Copy link to Test Online Editor
        </p>
      </button>
    </div>
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`SingleEditorToolbar see as diagram 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <button
      class="btn btn-sm kogito-button"
      data-testid="see-as-diagram-button"
    >
      <p
        style="display: inline;"
      >
        See as diagram
      </p>
    </button>
    <button
      class="btn btn-sm kogito-button"
      data-testid="open-ext-editor-button"
    >
      <p
        style="display: inline;"
      >
        Open in Test Online Editor
      </p>
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn btn-sm kogito-button"
        data-testid="copy-link-button"
      >
        <p
          style="display: inline;"
        >
          Copy link to Test Online Editor
        </p>
      </button>
    </div>
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`SingleEditorToolbar see as source 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <button
      class="btn btn-sm kogito-button"
      data-testid="see-as-source-button"
    >
      <p
        style="display: inline;"
      >
        See as source
      </p>
    </button>
    <button
      class="btn btn-sm kogito-button"
      data-testid="open-ext-editor-button"
    >
      <p
        style="display: inline;"
      >
        Open in Test Online Editor
      </p>
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn btn-sm kogito-button"
        data-testid="copy-link-button"
      >
        <p
          style="display: inline;"
        >
          Copy link to Test Online Editor
        </p>
      </button>
    </div>
    <button
      class="btn btn-sm kogito-button"
      data-testid="go-fullscreen-button"
    >
      <p
        style="display: inline;"
      >
        Full Screen
      </p>
    </button>
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
  </div>
</DocumentFragment>
`;
